--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,15 @@ jobs:
     - name: Deploy to Heroku
       run: |
         echo Hello
-    - uses: actions/checkout@v1
-    - run: git status
-    - run: git branch -a
-    - run: git push heroku main
-    
+    - uses: actions/checkout@v2
+      with:
+          fetch-depth: 0
+    - name: Deploy to Heroku
+      env:
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+        HEROKU_APP_NAME: waseda-covite19-docs
+      run: |
+        echo $HEROKU_API_TOKEN
+#      if: github.ref == 'refs/heads/master' && job.status == 'success'
+ #     run: |
+  #      git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/master:master
