--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         HEROKU_APP_NAME: waseda-covite19-docs
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
       run: |
-        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
+        echo github.ref
+        echo job.status
+#      if: github.ref == 'refs/heads/main' && job.status == 'success'
+#      run: |
+#        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
