--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         HEROKU_APP_NAME: waseda-covite19-docs
       run: |
-        echo github.ref
-        echo job.status
-#      if: github.ref == 'refs/heads/main' && job.status == 'success'
-#      run: |
-#        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
+        echo ${{ job.status }}
+        echo ${{ github.ref }}
+      if: github.ref == 'refs/heads/main' && job.status == 'success'
+      run: |
+        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
