--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,6 @@ jobs:
       run: |
         echo ${{ job.status }}
         echo ${{ github.ref }}
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
-      run: |
-        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
+#      if: github.ref == 'refs/heads/main' && job.status == 'success'
+#      run: |
+#        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
