--- a/local/db/docker-compose.yml
+++ b/local/db/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./setup.sql:/docker-entrypoint-initdb.d/setup.sql
+      - ./sql:/var/local
 
 volumes:
   postgres-data:
