--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,3 +11,10 @@ jobs:
     - name: Test PR
       run: |
         echo Hello PR
+    - uses: actions/checkout@v2
+
+    - name: compose-run
+      shell: bash
+      run: |
+        docker-compose up -d db
+
