--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,15 @@ services:
       - postgres-data:/var/lib/postgresql/data
       - ./local/db/setup.sql:/docker-entrypoint-initdb.d/setup.sql
       - ./local/db/sql:/var/local
+  migrate:
+      build: ./migrate
+      container_name: migrate
+      environment:
+        DATABASE_URL: postgres://gwp:gwp@db:5432/gwp?sslmode=disable
+      tty: true
+      volumes:
+        - ./migrate:/var
+      working_dir: /var
 
 volumes:
   postgres-data:
