--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,4 +33,6 @@ jobs:
       run: echo start go test
     - name: Docker Compose Run
       shell: bash
-      run: make go-test
+      run: |
+        docker-compose up -d app
+        docker exec local_app /bin/sh -c "go test ./..."
