--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,9 @@ name: PullRequest
 
 on:
   pull_request:
-    branches: [ feature/add-pr-check ]
+    branches:
+      - main
+      - develop
 
 jobs:
   migrate-check:
