--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     container_name: local_app
     environment:
       DATABASE_URL: postgres://gwp:gwp@db:5432/gwp?sslmode=disable
+      FRONT_URL: http://localhost:3000
     ports:
       - 8080:8080
     tty: true
