--- a/k8s/overlays/local/db/pvc.yaml
+++ b/k8s/overlays/local/db/pvc.yaml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: db-pv-claim
 spec:
-  storageClassName: mysql-storage
   accessModes:
     - ReadWriteOnce
   resources:
