--- a/k8s/overlays/local/db/service.yaml
+++ b/k8s/overlays/local/db/service.yaml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: db
 spec:
   ports:
-  - port: 3306
+  - name: mysql
+    port: 3306
+  - name: postgres
+    port: 5432
   selector:
-    app: mysql 
+    app: db 
   clusterIP: None
