add migrate file

--- a/k8s/overlays/local/db/db-postgres.yaml
+++ b/k8s/overlays/local/db/db-postgres.yaml
@@ -22,7 +22,7 @@ spec:
         - name: POSTGRES_PASSWORD
           value: password
         - name: POSTGRES_DB
-          value: test
+          value: postgres
         - name: POSTGRES_INITDB_ARGS
           value: '--encoding=UTF-8 --locale=C'
         ports:
